improved alignment issues

--- a/styles/_options.scss
+++ b/styles/_options.scss
@@ -280,6 +280,9 @@ body{
 
 .mini-favicon{
   margin-right: 6px;
+  width:16px;
+  height:16px;
+  margin: 1px 12px 0px 0px;
 }
 
 .selected{
