--- a/styles/styles.css
+++ b/styles/styles.css
@@ -345,7 +345,10 @@ body {
       vertical-align: bottom; }
 
 .mini-favicon {
-  margin-right: 6px; }
+  margin-right: 6px;
+  width: 16px;
+  height: 16px;
+  margin: 1px 12px 0px 0px; }
 
 .selected {
   border-left: 4px solid #2162AF;
